--- a/index.html
+++ b/index.html
@@ -346,7 +346,6 @@
     <div class="section-content">
         <h2>About Me</h2>
 
-        <!-- SIDE-BY-SIDE TEXT + VIDEO -->
         <div class="about-me-container">
             <div class="about-me-text">
                 <p>Hi! I'm Cyril Mae Libuton, a 2nd year Computer Science student with a strong passion for coding and continuous learning. I genuinely enjoy building things through code and exploring new technologies.</p>
@@ -365,7 +364,7 @@
             </div>
 
             <video class="portrait-video" autoplay muted loop playsinline>
-                <source src="myvideo.mp4" type="video/mp4">
+                <source src="images/myvideo.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -421,3 +420,4 @@
 
 </body>
 </html>
+
