--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             left: 0;
             width: 100%;
             background-color: var(--bg-cream);
-            padding: 1.5rem 5%;
+            padding: 1rem 5%;
             z-index: 999;
             border-bottom: 2px solid var(--border-line);
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
@@ -52,7 +52,11 @@
         .header-container {
             display: flex;
             align-items: center;
-            gap: 3rem;
+            gap: 2.5rem;
+        }
+
+        header img {
+            width: 55px;
         }
 
         nav {
@@ -73,7 +77,7 @@
         }
 
         main {
-            padding-top: 120px;
+            padding-top: 100px;
         }
 
         .hero {
@@ -264,7 +268,6 @@
             color: var(--primary-red);
         }
 
-        /* ABOUT ME WITH VIDEO SIDE-BY-SIDE */
         .about-me-container {
             display: grid;
             grid-template-columns: 1fr 250px;
@@ -276,7 +279,7 @@
         .about-me-text {
             font-size: 1.1rem;
             line-height: 1.9;
-            text-align: justify; /* Justify text */
+            text-align: justify;
         }
 
         .portrait-video {
@@ -284,29 +287,7 @@
             height: 450px;
             object-fit: cover;
             border-radius: 20px;
-            border: none; /* Removed red border */
-        }
-
-        @media (max-width: 768px) {
-            .hero {
-                grid-template-columns: 1fr;
-                text-align: center;
-            }
-
-            .hero-image-container {
-                margin-top: 2rem;
-            }
-
-            .about-me-container {
-                grid-template-columns: 1fr;
-                justify-items: center;
-                gap: 2rem;
-            }
-
-            .portrait-video {
-                width: 200px;
-                height: 360px;
-            }
+            border: none;
         }
     </style>
 </head>
@@ -316,7 +297,7 @@
 <header>
     <div class="header-container">
         <a href="gallery.html" target="portfolioTab" rel="noopener">
-            <img src="images/blacklogo.png" alt="mylogo" width="60">
+            <img src="images/blacklogo.png" alt="mylogo">
         </a>
 
         <nav>
@@ -341,7 +322,6 @@
     </div>
 </main>
 
-<!-- About Me Section -->
 <section id="about" class="section">
     <div class="section-content">
         <h2>About Me</h2>
@@ -372,7 +352,6 @@
     </div>
 </section>
 
-<!-- Projects Section -->
 <section id="projects" class="section">
     <div class="section-content">
         <h2>My Projects</h2>
@@ -395,7 +374,6 @@
     </div>
 </section>
 
-<!-- Contacts Section -->
 <section id="contacts" class="section">
     <div class="section-content">
         <h2>Contacts</h2>
@@ -420,4 +398,3 @@
 
 </body>
 </html>
-
