--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
 
 <header>
     <div class="header-container">
-        <a href="gallery.html" target="portfolioTab" rel="noopener">
-            <img src="images/blacklogo.png" alt="mylogo">
-        </a>
+            <a href="images/blacklogo.png" target="_blank">
+                <img src="images/blacklogo.png" alt="mylogo">
+            </a>
 
         <nav>
             <a href="gallery.html">Gallery</a>
@@ -398,3 +398,4 @@
 
 </body>
 </html>
+
