--- a/gallery.html
+++ b/gallery.html
@@ -161,8 +161,8 @@
    <body>
       <header>
          <div class="header-container">
-            <a href="index.html">
-            <img src="images/blacklogo.png" alt="mylogo">
+            <a href="images/blacklogo.png" target="_blank">
+                <img src="images/blacklogo.png" alt="mylogo">
             </a>
             <nav>
                <a href="index.html">Home</a>
@@ -330,3 +330,4 @@
       </footer>
    </body>
 </html>
+
