--- a/gallery.html
+++ b/gallery.html
@@ -187,29 +187,29 @@
                </div>
                <div class="gallery-row">
                   <figure class="figure-rect">
-                     <a href="images/gallery/friend1.jpeg" target="_blank"><img src="images/gallery/friend1.jpeg" alt="My Bestfriend Zea"></a>
+                     <a href="images/gallery/friend1.jpeg" target="NewTab"><img src="images/gallery/friend1.jpeg" alt="My Bestfriend Zea"></a>
                      <figcaption>My Bestfriend Zea</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/friend2.jpeg" target="_blank"><img src="images/gallery/friend2.jpeg" alt="My Bestfriend Trayce"></a>
+                     <a href="images/gallery/friend2.jpeg" target="NewTab"><img src="images/gallery/friend2.jpeg" alt="My Bestfriend Trayce"></a>
                      <figcaption>My Bestfriend Trayce</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/friend3.jpeg" target="_blank"><img src="images/gallery/friend3.jpeg" alt="Double Date w/ Zea"></a>
+                     <a href="images/gallery/friend3.jpeg" target="NewTab"><img src="images/gallery/friend3.jpeg" alt="Double Date w/ Zea"></a>
                      <figcaption>Double Date w/ Zea</figcaption>
                   </figure>
                </div>
                <div class="gallery-row">
                   <figure class="figure-square">
-                     <a href="images/gallery/friend4.jpeg" target="_blank"><img src="images/gallery/friend4.jpeg" alt="Lunch w/ Zea"></a>
+                     <a href="images/gallery/friend4.jpeg" target="NewTab"><img src="images/gallery/friend4.jpeg" alt="Lunch w/ Zea"></a>
                      <figcaption>Lunch w/ Zea</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/friend5.jpeg" target="_blank"><img src="images/gallery/friend5.jpeg" alt="UE friends"></a>
+                     <a href="images/gallery/friend5.jpeg" target="NewTab"><img src="images/gallery/friend5.jpeg" alt="UE friends"></a>
                      <figcaption>UE friends</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/friend6.jpeg" target="_blank"><img src="images/gallery/friend6.jpeg" alt="Childhood friends"></a>
+                     <a href="images/gallery/friend6.jpeg" target="NewTab"><img src="images/gallery/friend6.jpeg" alt="Childhood friends"></a>
                      <figcaption>Childhood friends</figcaption>
                   </figure>
                </div>
@@ -221,29 +221,29 @@
                </div>
                <div class="gallery-row">
                   <figure class="figure-rect">
-                     <a href="images/gallery/family1.jpeg" target="_blank"><img src="images/gallery/family1.jpeg" alt="Family 1"></a>
+                     <a href="images/gallery/family1.jpeg" target="NewTab"><img src="images/gallery/family1.jpeg" alt="Family 1"></a>
                      <figcaption>Father side</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/family2.jpeg" target="_blank"><img src="images/gallery/family2.jpeg" alt="Family 2"></a>
+                     <a href="images/gallery/family2.jpeg" target="NewTab"><img src="images/gallery/family2.jpeg" alt="Family 2"></a>
                      <figcaption>Me and my niece</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/family3.jpeg" target="_blank"><img src="images/gallery/family3.jpeg" alt="Family 3"></a>
+                     <a href="images/gallery/family3.jpeg" target="NewTab"><img src="images/gallery/family3.jpeg" alt="Family 3"></a>
                      <figcaption>Mother side</figcaption>
                   </figure>
                </div>
                <div class="gallery-row">
                   <figure class="figure-square">
-                     <a href="images/gallery/family4.jpeg" target="_blank"><img src="images/gallery/family4.jpeg" alt="Family 4"></a>
+                     <a href="images/gallery/family4.jpeg" target="NewTab"><img src="images/gallery/family4.jpeg" alt="Family 4"></a>
                      <figcaption>w/ my mom</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/family5.jpeg" target="_blank"><img src="images/gallery/family5.jpeg" alt="Family 5"></a>
+                     <a href="images/gallery/family5.jpeg" target="NewTab"><img src="images/gallery/family5.jpeg" alt="Family 5"></a>
                      <figcaption>Father side</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/family6.jpeg" target="_blank"><img src="images/gallery/family6.jpeg" alt="Family 6"></a>
+                     <a href="images/gallery/family6.jpeg" target="NewTab"><img src="images/gallery/family6.jpeg" alt="Family 6"></a>
                      <figcaption>My mom and her lover</figcaption>
                   </figure>
                </div>
@@ -255,29 +255,29 @@
                </div>
                <div class="gallery-row">
                   <figure class="figure-rect">
-                     <a href="images/gallery/hobby1.jpeg" target="_blank"><img src="images/gallery/hobby1.jpeg" alt="Hobby 1"></a>
+                     <a href="images/gallery/hobby1.jpeg" target="NewTab"><img src="images/gallery/hobby1.jpeg" alt="Hobby 1"></a>
                      <figcaption>Feb 2026</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/hobby2.jpeg" target="_blank"><img src="images/gallery/hobby2.jpeg" alt="Hobby 2"></a>
+                     <a href="images/gallery/hobby2.jpeg" target="NewTab"><img src="images/gallery/hobby2.jpeg" alt="Hobby 2"></a>
                      <figcaption>Feb 2025</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/hobby3.jpeg" target="_blank"><img src="images/gallery/hobby3.jpeg" alt="Hobby 3"></a>
+                     <a href="images/gallery/hobby3.jpeg" target="NewTab"><img src="images/gallery/hobby3.jpeg" alt="Hobby 3"></a>
                      <figcaption>Feb 2025</figcaption>
                   </figure>
                </div>
                <div class="gallery-row">
                   <figure class="figure-square">
-                     <a href="images/gallery/hobby4.jpeg" target="_blank"><img src="images/gallery/hobby4.jpeg" alt="Hobby 4"></a>
+                     <a href="images/gallery/hobby4.jpeg" target="NewTab"><img src="images/gallery/hobby4.jpeg" alt="Hobby 4"></a>
                      <figcaption>Mar 2025</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/hobby5.jpeg" target="_blank"><img src="images/gallery/hobby5.jpeg" alt="Hobby 5"></a>
+                     <a href="images/gallery/hobby5.jpeg" target="NewTab"><img src="images/gallery/hobby5.jpeg" alt="Hobby 5"></a>
                      <figcaption>Jun 2025</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/hobby6.jpeg" target="_blank"><img src="images/gallery/hobby6.jpeg" alt="Hobby 6"></a>
+                     <a href="images/gallery/hobby6.jpeg" target="NewTab"><img src="images/gallery/hobby6.jpeg" alt="Hobby 6"></a>
                      <figcaption>Jul 2025</figcaption>
                   </figure>
                </div>
@@ -289,29 +289,29 @@
                </div>
                <div class="gallery-row">
                   <figure class="figure-rect">
-                     <a href="images/gallery/lover1.jpeg" target="_blank"><img src="images/gallery/lover1.jpeg" alt="Lover 1"></a>
+                     <a href="images/gallery/lover1.jpeg" target="NewTab"><img src="images/gallery/lover1.jpeg" alt="Lover 1"></a>
                      <figcaption>Antipolo date</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/lover2.jpeg" target="_blank"><img src="images/gallery/lover2.jpeg" alt="Lover 2"></a>
+                     <a href="images/gallery/lover2.jpeg" target="NewTab"><img src="images/gallery/lover2.jpeg" alt="Lover 2"></a>
                      <figcaption>Photobooth date</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/lover3.jpeg" target="_blank"><img src="images/gallery/lover3.jpeg" alt="Lover 3"></a>
+                     <a href="images/gallery/lover3.jpeg" target="NewTab"><img src="images/gallery/lover3.jpeg" alt="Lover 3"></a>
                      <figcaption>Antipolo date</figcaption>
                   </figure>
                </div>
                <div class="gallery-row">
                   <figure class="figure-square">
-                     <a href="images/gallery/lover4.jpeg" target="_blank"><img src="images/gallery/lover4.jpeg" alt="Lover 4"></a>
+                     <a href="images/gallery/lover4.jpeg" target="NewTab"><img src="images/gallery/lover4.jpeg" alt="Lover 4"></a>
                      <figcaption>Cinema date</figcaption>
                   </figure>
                   <figure class="figure-rect">
-                     <a href="images/gallery/lover5.jpeg" target="_blank"><img src="images/gallery/lover5.jpeg" alt="Lover 5"></a>
+                     <a href="images/gallery/lover5.jpeg" target="NewTab"><img src="images/gallery/lover5.jpeg" alt="Lover 5"></a>
                      <figcaption>Photobooth date</figcaption>
                   </figure>
                   <figure class="figure-square">
-                     <a href="images/gallery/lover6.jpeg" target="_blank"><img src="images/gallery/lover6.jpeg" alt="Lover 6"></a>
+                     <a href="images/gallery/lover6.jpeg" target="NewTab"><img src="images/gallery/lover6.jpeg" alt="Lover 6"></a>
                      <figcaption>Cafe date</figcaption>
                   </figure>
                </div>
@@ -330,4 +330,5 @@
       </footer>
    </body>
 </html>
+
 
