--- a/aboutme.html
+++ b/aboutme.html
@@ -198,6 +198,7 @@
                   <img src="images/bio/pic2.jpeg" alt="Childhood Photo 2" class="img-right" style="width:220px; height:220px;">
                   <p> Over time, I started to understand why my life had been like this, and even though it wasn't simple, it taught me important lessons about staying strong.<sup>10</sup> I learned that staying positive, even when things look different or hard, really helps.<sup>11</sup> These experiences shaped me and helped me see the love and care around me, even if it wasn't like what most people expect.<sup>12</sup> They gave me the confidence to keep going, believing that better things are still coming.<sup>13</sup> Life's challenges and my unusual family made me who I am today.<sup>14</sup> I'm thankful for the strength and hope those times gave me, and I carry those feelings as I face each new day with optimism.<sup>15</sup> </p>
                   <div class="clear"></div>
+                  <a href="#top" class="back-to-top">Back to Top</a>
                </div>
             </div>
             <!-- Teenage Section -->
@@ -211,6 +212,7 @@
                   <img src="images/bio/teen2.jpg" alt="Teenage Photo 2" class="img-left" style="width:40%; height:200px;">
                   <p> That still, quiet time became a big turning point for me.<sup>11</sup> It helped me become stronger and more confident.<sup>12</sup> It was a key time that helped build the person I am now and gave me the drive to keep moving forward.<sup>13</sup> The self-awareness I gained helped me accept who I am instead of hiding parts of myself.<sup>14</sup> I started paying more attention to what I really like and who I want to be, instead of just trying to fit in.<sup>15</sup> This didn't happen all at once, but step by step.<sup>16</sup> I learned that growing is something we do all the time, and every experience, good or bad, helps us become stronger.<sup>17</sup> Overall, my teenage years gave me a strong base for a lifelong journey of learning and accepting myself.<sup>18</sup> </p>
                   <div class="clear"></div>
+                  <a href="#top" class="back-to-top">Back to Top</a>
                </div>
             </div>
             <!-- College Section -->
@@ -240,3 +242,4 @@
       </footer>
    </body>
 </html>
+
