--- a/mybeats.html
+++ b/mybeats.html
@@ -81,7 +81,7 @@
         }
 
         .section {
-            padding: 8rem 10% 6rem;
+            padding: 6rem 10%;
         }
 
         .section-content {
@@ -191,18 +191,6 @@
 
         footer p {
             font-size: 0.9rem;
-        }
-
-        @media(max-width: 900px){
-            .beats-grid {
-                grid-template-columns: repeat(2, 1fr);
-            }
-        }
-
-        @media(max-width: 600px){
-            .beats-grid {
-                grid-template-columns: 1fr;
-            }
         }
     </style>
 </head>
